Add css to quote section

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ a {
 .members img {
     width:200px;
     height:200px;
-    border: 5px groove snow;
+    border: 5px ridge black;
     border-radius: 20px;
 }
 
@@ -103,9 +103,34 @@ a {
     padding: 40px 50px 0px 50px;
 }
 
+.quotesection {
+    display: flex;
+    flex-direction: column;
+    padding: 100px;
+    background-color: #E5E7EB;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    color:#1f2937;
+    align-self: center;
+}
+
+.quoter {
+    color:#1f2937;
+    font-weight: extra-bold;
+    align-self: flex-end;
+    font-size: 28px;
+}
+
 
 button {
     background-color: #3882f6;
+    color: white;
+    padding: 5px 20px;
+    border-radius: 8px;
+    border: none;
     margin-left: 100px;
     margin-right: 100px;
 }
